--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,6 +1,8 @@
 .navbar {
   position: fixed;
+  top: 0;
   width: 100%;
+  height: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
